--- a/go-react/concepts/public/index.html
+++ b/go-react/concepts/public/index.html
@@ -6,6 +6,8 @@
     <title>React Concepts</title>
   </head>
   <body>
+    <div id="app"></div>
+
     <script src="./bundle.js"></script>
   </body>
 </html>
